Update chart logic + fix deps issue

--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -71,7 +71,7 @@ const social = [
   <div class="container mx-auto flex flex-col">
     <div class="w-full">
       <h4 class="footer-title">About</h4>
-      <p>
+      <p class="[&_a]:link-primary">
         Eli Gundry is a full stack web developer that loves JavaScript, devops
         and web standards. When he isn't coding, he's{' '}
         <a href="/blog#cooking">
