More resume tweaks

--- a/astro/src/components/Resume/Experience.astro
+++ b/astro/src/components/Resume/Experience.astro
@@ -51,7 +51,7 @@ const {
   }`}
   itemprop={endDate ? 'alumniOf' : 'worksFor'}
 >
-  <h3 itemprop="name" class="w-full sm:w-1/2 print:w-1/2 m-0">
+  <h3 itemprop="name" class="w-full sm:w-1/2 print:w-1/2 m-0 text-base">
     <a href={url} itemprop="url">
       {name}
     </a>
