--- a/astro/src/components/Resume/Section.astro
+++ b/astro/src/components/Resume/Section.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props
   {
     title && (
       <header>
-        <h2 class="my-0 border-b-2 border-b-accent text-base">{title}</h2>
+        <h2 class="my-0 border-b-2 border-b-accent text-lg">{title}</h2>
       </header>
     )
   }
