--- a/astro/src/components/DaylioEntry.astro
+++ b/astro/src/components/DaylioEntry.astro
@@ -20,6 +20,7 @@ const { entry, wrapInPaper = false } = Astro.props
     'scroll-mt-20',
     'target:border-2',
     'target:border-primary',
+    'rounded-box',
   ]}
 >
   <meta
