Add headers + intros to each page + resume print btn

--- a/astro/src/pages/blog.astro
+++ b/astro/src/pages/blog.astro
@@ -83,6 +83,12 @@ const tags = [
   description="Thoughts, tutorials, musings, album reviews and everything in between that I have written down."
 >
   <div id="post-list" class="paper prose">
+    <h1 class="mb-0">Blog</h1>
+    <p>
+      Thoughts, tutorials, musings, album reviews and everything in between that
+      I have written down. I try to write four posts a year, but I'm not super
+      strict about that.
+    </p>
     <div class="tag-filter btn-group">
       {
         tags.map((tag) => (
