--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -38,7 +38,7 @@ const favoritePosts = (await getCollection('blog'))
 
 <Layout>
   <section class:list={['intro', 'paper', 'prose']}>
-    <h2>Glad To Meet You!</h2>
+    <h1>Glad To Meet You!</h1>
     <figure
       class:list={[
         'float-right',
@@ -144,7 +144,7 @@ const favoritePosts = (await getCollection('blog'))
     <h2>Are You A Blogger?</h2>
     <p>
       I'm certainly trying to be! I try to write four posts a year. Sometimes I
-      exceed it, other times, I completely whiff. No pressure though. Here are
+      exceed it, other times, I completely whiff. No pressure though. Below are
       some of my favorite posts.
     </p>
     <div class="posts flex flex-col gap-4">
