--- a/astro/src/pages/resume.astro
+++ b/astro/src/pages/resume.astro
@@ -548,6 +548,12 @@ const resume = {
   </div>
 </Layout>
 
+<style>
+  @page {
+    margin-bottom: 0.5cm;
+  }
+</style>
+
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     const printBtn = document.querySelector('.print-button')
