--- a/astro/src/pages/blog.astro
+++ b/astro/src/pages/blog.astro
@@ -84,11 +84,12 @@ const tags = [
 >
   <div id="post-list" class="paper prose">
     <h1 class="mb-0">Blog</h1>
-    <p>
+    <p class="mb-2">
       Thoughts, tutorials, musings, album reviews and everything in between that
       I have written down. I try to write four posts a year, but I'm not super
       strict about that.
     </p>
+    <h6>Filter by tag</h6>
     <div class="tag-filter btn-group">
       {
         tags.map((tag) => (
