--- a/astro/src/pages/resume.astro
+++ b/astro/src/pages/resume.astro
@@ -406,7 +406,10 @@ const resume = {
 }
 ---
 
-<Layout title="Resume">
+<Layout
+  title="Resume"
+  description="You should hire me! My resume is pretty nice and I can bring a lot to any team."
+>
   <div
     class:list={[
       'paper',
