Alright, this might be good enough

--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -71,14 +71,14 @@ const social = [
   <div class="container mx-auto flex flex-col">
     <div class="w-full">
       <h4 class="footer-title">About</h4>
-      <p class="[&_a]:link-primary">
+      <p class="[&_a]:link-primary font-serif">
         Eli Gundry is a full stack web developer that loves JavaScript, devops
         and web standards. When he isn't coding, he's{' '}
         <a href="/blog#cooking">
           <EmojiText emoji="👨‍🍳" label="chef cause I'm cooking">
-            cooking up something mean in the kitchen
+            cooking up something mean in the kitchen,
           </EmojiText>
-        </a>,{' '}
+        </a>{' '}
         <EmojiText
           emoji="🎾"
           label="tennis ball because that's what I'm playing"
@@ -87,9 +87,9 @@ const social = [
         </EmojiText>{' '}
         or{' '}
         <EmojiText emoji="🐈🐈‍⬛" label="it's my cats!">
-          annoying his cats
+          annoying his cats.
         </EmojiText>
-        . He is also a{' '}
+        He is also a{' '}
         <a href="/web0.html">
           <EmojiText
             emoji="✳️"
