Fix frontmatter showing up in posts

--- a/astro/src/layouts/Post.astro
+++ b/astro/src/layouts/Post.astro
@@ -42,6 +42,8 @@ const url = `/${collection}/${slug}/`
 <BaseLayout
   title={frontmatter.title}
   description={frontmatter.description}
+  frontmatter={frontmatter}
+  remarkPluginFrontmatter={remarkPluginFrontmatter}
   fancyBackgroundPoints={fancyBackgroundPoints}
 >
   <article
