--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { SEO } from 'astro-seo'
-import type { CollectionEntry } from 'astro:content'
+import markdownToTxt from 'markdown-to-txt'
+import { CollectionEntry, getEntryBySlug } from 'astro:content'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import FancyBackground from '../components/FancyBackground/index.astro'
@@ -23,9 +24,20 @@ export interface Props {
   }>
 }
 
-const { title, description, frontmatter, fancyBackgroundPoints } = Astro.props
-const latestFeeling = await daylio.getLatest()
-const modified = await getLastModifiedForPath(Astro.url.pathname)
+const [latestFeeling, modified, about] = await Promise.all([
+  daylio.getLatest(),
+  getLastModifiedForPath(Astro.url.pathname),
+  getEntryBySlug('sections', 'about').then((section) =>
+    markdownToTxt(section.body).split('\n').slice(2).join(' ')
+  ),
+])
+
+const {
+  title,
+  description = about,
+  frontmatter,
+  fancyBackgroundPoints,
+} = Astro.props
 let opengraphImage = new URL(
   frontmatter?.cover ?? config.seoImage ?? '',
   config.url
