--- a/astro/src/components/Post/Preview.astro
+++ b/astro/src/components/Post/Preview.astro
@@ -29,6 +29,7 @@ if ('tags' in entry.data) {
   class:list={tags}
 >
   <link itemprop="author publisher" href="#eli-gundry" />
+  {entry.data.cover && <link itemprop="image" href={entry.data.cover} />}
   {
     remarkPluginFrontmatter.readingTime > 0 && (
       <meta
@@ -53,13 +54,25 @@ if ('tags' in entry.data) {
       </EmojiText>
     </time>
     {
-      readingTime !== undefined && (
+      readingTime !== undefined && entry.collection === 'blog' && (
         <p>
           <EmojiText label="stopwatch denoting time to read article" emoji="⏱">
             {Math.max(readingTime, 1)}&nbsp;
             {readingTime > 1 ? 'Minutes' : 'Minute'}
           </EmojiText>
         </p>
+      )
+    }
+    {
+      entry.collection === 'talks' && entry.data.location && (
+        <span>
+          <EmojiText
+            emoji="📍"
+            label="map pin denoting that I gave this talk somewhere"
+          >
+            {entry.data.location}
+          </EmojiText>
+        </span>
       )
     }
   </div>
